# exlutum

./: CMakeLists.txt  Readme.md
doc/grammar/: arabilis.g  hex.g  label.g  macro.g
examples/: CMakeLists.txt  exit42.hex  fizzbuzz.arabilis  hello_macro.macro  hello_world.label  test_examples.sh
src/: CMakeLists.txt
src/arabilis_cpp/: CMakeLists.txt  arabilis.cpp  ast.cpp  ast.h  backend.cpp  backend.h  frontend.cpp  frontend.h  io.cpp  io.h
src/hex2bin_bin/: CMakeLists.txt  hex2bin
src/hex2bin_c/: CMakeLists.txt  hex2bin.c
src/hex2bin_hex/: CMakeLists.txt  hex2bin.hex
src/hex2bin_nasm/: CMakeLists.txt  hex2bin.s
src/label2hex_c/: CMakeLists.txt  label2hex.c
src/label2hex_cpp/: CMakeLists.txt  label2hex.cpp
src/macro2label_cpp/: CMakeLists.txt  macro2label.cpp
tests/: comments.hex2bin.yaml  empty.hex2bin.yaml  helloworld.hex2bin.yaml  invalid_macro_name.macro2label.yaml  io.arabilis.yaml  label_empty.label2hex.yaml  label_eof.label2hex.yaml  label_in_macro.macro2label.yaml  label_invalid_char.label2hex.yaml  label_invalid_cont.label2hex.yaml  label_invalid_start.label2hex.yaml  label_too_long.label2hex.yaml  labels.label2hex.yaml  lex.arabilis.yaml  lex_invalid_escape.arabilis.yaml  lex_unknown_escape.arabilis.yaml  lex_unknown_token.arabilis.yaml  lex_unterminated_string.arabilis.yaml  lowercase.hex2bin.yaml  macro_in_comment.macro2label.yaml  macro_in_macro.macro2label.yaml  macros.macro2label.yaml  missing_colon.macro2label.yaml  missing_quote1.macro2label.yaml  missing_quote2.macro2label.yaml  missing_space.macro2label.yaml  newlines.hex2bin.yaml  oddnybbles.hex2bin.yaml  oddnybbles_ok.label2hex.yaml  parse.arabilis.yaml  parse_break_outside_loop.arabilis.yaml  parse_continue_outside_loop.arabilis.yaml  parse_duplicate_global.arabilis.yaml  parse_duplicate_local.arabilis.yaml  parse_for_name_mismatch.arabilis.yaml  parse_missing_main.arabilis.yaml  parse_unexpected_token.arabilis.yaml  parse_unknown_symbol.arabilis.yaml  runtest.py  size.label2hex.yaml  (+1 more)
